added image to file

--- a/index.html
+++ b/index.html
@@ -19,3 +19,6 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
+        <p>Hi my name is Lucien.</p>
+        <img src="Documents/Dev_class/ITMD441/images/me.jpeg" alt="A picture of me">
+    </section>
