just testing to see if webpage works

--- a/index.html
+++ b/index.html
@@ -22,3 +22,5 @@
         <p>Hi my name is Lucien.</p>
         <img src="Documents/Dev_class/ITMD441/images/me.jpeg" alt="A picture of me">
     </section>
+</body>
+</html>
