--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="about">
         <h2>About Me</h2>
         <p>Hi my name is Lucien.</p>
-        <img src="Documents/Dev_class/ITMD441/images/me.jpeg" alt="A picture of me">
+        <img src="/images/me.jpeg" alt="A picture of me">
     </section>
 </body>
 </html>
