added my background

--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <p>Hi my name is Lucien.</p>
         <img src="/images/me.jpeg" alt="A picture of me">
     </section>
+    <section id="class">
+        <h2>My Web Experience </h2>
+        <p>I have been going to IIT since 2020 and I have taken a lot of web development classes including
+            the recommended prerequisite for this class in particular. I also taken some web development
+            classes in high school during my senior year in preparation for what I knew I wanted to study at IIT.  
+            My major is Information Technology and Management and I currently work for Apple as a field design engineer
+            and I do have a good amount of web development experience.</p>
+    </section>
 </body>
 </html>
