--- a/index.html
+++ b/index.html
@@ -8,27 +8,37 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Webpage</h1>
+        <h1>Welcome to My Webpage for ITMD 441</h1>
+        <button id="toggle-dark-mode">Toggle Dark Mode</button>
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
-                <li><a href="#class">About the Class</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#class">Webpage Development History</a></li>
             </ul>
         </nav>
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi my name is Lucien.</p>
-        <img src="/images/me.jpeg" alt="A picture of me">
+        <p>Hello! My name is [Your Name]. I have a background in web development and design. I enjoy creating visually appealing and user-friendly websites. My experience includes working with HTML, CSS, JavaScript, and various web development frameworks.</p>
+        <img src="your-image.jpg" alt="A picture of me">
     </section>
     <section id="class">
-        <h2>My Web Experience </h2>
-        <p>I have been going to IIT since 2020 and I have taken a lot of web development classes including
-            the recommended prerequisite for this class in particular. I also taken some web development
-            classes in high school during my senior year in preparation for what I knew I wanted to study at IIT.  
-            My major is Information Technology and Management and I currently work for Apple as a field design engineer
-            and I do have a good amount of web development experience.</p>
+        <h2>About the Class</h2>
+        <p>This class is designed to teach the fundamentals of web development. We will cover topics such as HTML, CSS, JavaScript, and more. By the end of the class, you will have the skills to create your own websites from scratch.</p>
     </section>
+    <footer>
+        <p>&copy; 2024 Lucien Talavera. All rights reserved.</p>
+    </footer>
+
+    <script>
+        const toggleButton = document.getElementById('toggle-dark-mode');
+        toggleButton.addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+            document.querySelector('header').classList.toggle('dark-mode');
+            document.querySelectorAll('nav ul li a').forEach(link => link.classList.toggle('dark-mode'));
+            document.querySelectorAll('section').forEach(section => section.classList.toggle('dark-mode'));
+            document.querySelector('footer').classList.toggle('dark-mode');
+        });
+    </script>
 </body>
 </html>
