fixed about section

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! My name is [Your Name]. I have a background in web development and design. I enjoy creating visually appealing and user-friendly websites. My experience includes working with HTML, CSS, JavaScript, and various web development frameworks.</p>
-        <img src="your-image.jpg" alt="A picture of me">
+        <p>Hello! My name is Lucien Talavera.  This is my last year at IIT and my major is 
+            Information Technology and Management.  I currently work for Apple as a Field Design 
+            Engineer.  I love all things technology, cars, and pop culture and I am really excited
+            about learning a lot in this class.
+        </p>
+        <img src="/images/me.jpeg" alt="A picture of me">
     </section>
     <section id="class">
-        <h2>About the Class</h2>
-        <p>This class is designed to teach the fundamentals of web development. We will cover topics such as HTML, CSS, JavaScript, and more. By the end of the class, you will have the skills to create your own websites from scratch.</p>
+        <h2>My Webpage Development History</h2>
+        <p></p>
     </section>
     <footer>
         <p>&copy; 2024 Lucien Talavera. All rights reserved.</p>
