changing colors of style sheet

--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </section>
     <section id="class">
         <h2>My Webpage Development History</h2>
-        <p></p>
+        <p>I have taken a lot of classes here at IIT that do have a lot of webpage development 
+            in them.  I have even taken the prerequisite for this class that is recommended.  I have even taken
+            some software development classes all the way back in high school.  I am execited to expand my webpage 
+            development knowledge and to learn as much as I can in this class.  
+        </p>
     </section>
     <footer>
         <p>&copy; 2024 Lucien Talavera. All rights reserved.</p>
