put images next to eachother

--- a/index.html
+++ b/index.html
@@ -19,23 +19,26 @@
     </header>
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! My name is Lucien Talavera.  This is my last year at IIT and my major is 
-            Information Technology and Management.  I currently work for Apple as a Field Design 
-            Engineer.  I love all things technology, cars, and pop culture and I am really excited
+        <p>Hello! My name is Lucien Talavera. This is my last year at IIT and my major is 
+            Information Technology and Management. I currently work for Apple as a Field Design 
+            Engineer. I love all things technology, cars, and pop culture and I am really excited
             about learning a lot in this class.
         </p>
-        <img src="/images/me.jpeg" alt="A picture of me">
+        <div class="image-container">
+            <img src="/images/me.jpeg" alt="A picture of me">
+            <img src="/images/applelogo.jpg" alt="Apple logo">
+        </div>
     </section>
     <section id="class">
         <h2>My Webpage Development History</h2>
         <p>I have taken a lot of classes here at IIT that do have a lot of webpage development 
-            in them.  I have even taken the prerequisite for this class that is recommended.  I have even taken
-            some software development classes all the way back in high school.  I am execited to expand my webpage 
+            in them. I have even taken the prerequisite for this class that is recommended. I have even taken
+            some software development classes all the way back in high school. I am excited to expand my webpage 
             development knowledge and to learn as much as I can in this class.  
         </p>
     </section>
     <footer>
-        <p>&copy; 2024 Lucien Talavera. All rights reserved.</p>
+        <p>© 2024 Lucien Talavera. All rights reserved.</p>
     </footer>
 
     <script>
