--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="image-container">
             <img src="/images/me.jpeg" alt="A picture of me">
             <img src="/images/applelogo.jpg" alt="Apple logo">
+            <img src="/images/golfr.jpeg" alt="Golf">
         </div>
     </section>
     <section id="class">
