fixing images again

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </p>
         <div class="image-container">
             <img src="/images/me.jpeg" alt="A picture of me">
-            <img src="/images/applelogo.jpg" alt="Apple logo">
+            <img src="/images/applelogo.jpeg" alt="Apple logo">
             <img src="/images/golfr.jpeg" alt="Golf">
         </div>
     </section>
