trying to get images on github website

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             about learning a lot in this class.
         </p>
         <div class="image-container">
-            <img src="/images/me.jpeg" alt="A picture of me">
-            <img src="/images/applelogo.jpeg" alt="Apple logo">
-            <img src="/images/golfr.jpeg" alt="Golf">
+            <img src="./images/me.jpeg" alt="A picture of me">
+            <img src="./images/applelogo.jpeg" alt="Apple logo">
+            <img src="./images/golfr.jpeg" alt="Golf">
         </div>
     </section>
     <section id="class">
